test/classes/errors/nilability-init-var/init-var-oknil-unmanaged-from-nonnil-borrowed.chpl
//  lhs: unmanaged?  rhs: borrowed!  error: mm

class MyClass {
  var x: int;
}

var rhs = new borrowed MyClass();

var lhs: unmanaged MyClass? = rhs;
