test/classes/errors/nilability-init-var/init-var-oknil-unmanaged-from-nonnil-borrowed.good
init-var-oknil-unmanaged-from-nonnil-borrowed.chpl:9: error: cannot assign to unmanaged MyClass? from borrowed MyClass
